[package]
name = "rinklers"
version = "0.1.0"
authors = ["Alex Mikhalev <alexmikhalevalex@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
signal = "0.3"
chrono = { version = "0.2", features = [ "serde" ] }
num = "0.1"
colored = "1.3"

[replace]
"chrono:0.2.25" = { git = "https://github.com/lifthrasiir/rust-chrono.git" }
